hphp/hack/test/typecheck/duplicate_class_attributes.php
<?hh // partial

<<__Deprecated('a'), __Deprecated('b')>>
class F {}
